Multi-issue pipeline support with updated CVA6
Multi-port pipeline stages are realized as 'CoreMultiport' stages, with the individual ports as child 'port stages' (of type 'Core').
Various parts of SCAL and its strategies, especially custom registers and hazard handling, are updated to support dual-issue.

The ISAX receives a single-port view, reflecting the port that has a matching ISAX instruction;
 if there are several matching ports, any but the first in instruction order are stalled.

Now targeting CVA6 bcb0f7d, with legacy support for 33ab2efa.